--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "twitter-api-v2": "^1.18.1"
   }
 }
